完成媒体素材管理。支持上传图片文件
